[package]
name = "pam-wsl-hello"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>", "Diab Neiroukh <lazerl0rd@thezest.dev>"]

[lib]
name = "pam_wsl_hello"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.0"
openssl = "0.10.29"
toml = "0.4"
uuid = { version = "0.5", features = ["v4"] }
